refactor: ResponseUtils